apps/trek/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trek
  labels:
    gateway-access: trek
