apps/trek/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trek
  namespace: trek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trek
  template:
    metadata:
      labels:
        app: trek
    spec:
      nodeSelector:
        affected_vlan: "50"
      securityContext:
        fsGroup: 1000
      containers:
      - name: trek
        image: mauriceboe/trek:4.3.2@sha256:0e6899b9070635a4f08242caa8c926d66cba7a3f9e8fa88c6ad88d09275969d1
        ports:
        - containerPort: 3000
          name: http
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
            add: ["CHOWN", "SETUID", "SETGID"]
        volumeMounts:
        - name: trek-data-vol
          mountPath: /app/data
        - name: trek-uploads-vol
          mountPath: /app/uploads
        - name: tmp-volume
          mountPath: /tmp
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 30
      volumes:
      - name: tmp-volume
        emptyDir: {}
      - name: trek-data-vol
        persistentVolumeClaim:
          claimName: data-pvc # Matches your created PVC
      - name: trek-uploads-vol
        persistentVolumeClaim:
          claimName: upload-pvc # Matches your created PVC
